# stephenskywatcher

./: .gitignore  .pylintrc  README.md  image-hook.sh  image.sh  nohup.out  pyproject.toml  restart.sh  run.sh  start.py  typescript  voice_over
__ARCHIVE__/: app.py  app2.py  gphoto copy.py  gphoto2.py  stage.py
src/: README-eclipse.md  __init__.py  bracketed.py  bracketed_manual.py  config.py  continuous.py  download_last.py  eclipse.py  functions.py  hook.sh  main.py  scheduled-main.py  util.py  welcome.py
src/audio/: ATTACH_SOLAR_FILTER.flac  BAILYS_BEADS.flac  BEGINS_IN.flac  C1.flac  C2.flac  C3.flac  C4.flac  COUNTDOWN_AMELIA.flac  EIGHT.flac  FIRST_CONTACT.flac  FIVE.flac  FOUR.flac  FOURTH_CONTACT.flac  GLASSES_OFF.flac  GLASSES_ON.flac  HAS_BEGUN.flac  IN.flac  MINUTES.flac  NINE.flac  NOW.flac  ONE.flac  PREPARE_FOR.flac  PREPARE_TO.flac  PREPARE_TO_SEE.flac  REMOVE_SOLAR_FILTER.flac  SECONDS.flac  SECOND_CONTACT.flac  SEE.flac  SEVEN.flac  SIX.flac  SIXTY.flac  TEN.flac  THIRD_CONTACT.flac  THIRTY.flac  THREE.flac  TOTALITY.flac  TWENTY.flac  TWO.flac  T_MINUS.flac  WELCOME_ECLIPSE.flac  (+3 more)
src/gpio/: __init__.py  buttons.py  leds.py  main.py  motor.py  pins.py
src/lib/: __init__.py  action.py  camera.py  display_image.py  kill_gphoto2.py  play.py  util.py
src/lib/camera/: __init__.py  action.py  camera copy.py  camera.py  shoot.py  util.py
src/lib/enums/: __init__.py  actions.py  enums.py  events.py  gphoto.py  settings.py
src/lib/gphoto/: __init__.py
src/lib/gpio/: __init__.py  buttons.py  gpio.py  leds.py
src/logger/: color.py  logger.py
(+10 files in other folders)
