[tool.poetry]
name = "eclipse-py"
version = "0.1.0"
description = ""
authors = ["Stephen <stephen@theyoungs.cloude>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygments = "^2.17.2"
schedule = "^1.2.1"
gphoto2 = "^2.5.0"
sh = "^2.0.6"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
astropy = "^6.0.0"
sunpy = "^5.1.1"
jplephem = "^2.21"
pytz = "^2024.1"
timezonefinder = "^6.5.0"
requests = "^2.31.0"
geopy = "^2.4.1"
rpi-gpio = "^0.7.1"
gpiod = "^2.1.3"
zc = "^0.1.1"
filelock = "^3.13.3"
opencv-python = "^4.9.0.80"
screeninfo = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
